--- a/src/app/add-employee/add-employee.component.css
+++ b/src/app/add-employee/add-employee.component.css
@@ -1,16 +1,22 @@
 .add {
-  padding-left: 20%;
+  padding-left: 15%;
+  padding-top: 30px;
 }
 
 .add input {
-  padding-right: 50px;
+  height: 3vh;
 }
 
 .add button {
-  margin-top: 30px;
-  width: 60px;
-  height: 5vh;
+  margin-top: 20px;
+}
+
+h1 {
+  margin-top: 10px;
+  padding-left: 15%;
+  color: skyblue;
+  font-family: sans-serif;
   font-weight: bold;
-  border: 1px solid;
+  font-size: 25px;
 }
 /*# sourceMappingURL=add-employee.component.css.map */
