--- a/src/app/add-employee/add-employee.component.html
+++ b/src/app/add-employee/add-employee.component.html
@@ -1,6 +1,7 @@
+<h1>Add Employee</h1>
 <form #f="ngForm" (ngSubmit)="onSubmit(f)">
   <div class="add">
-    <mat-form-field class="example-full-width">
+    <mat-form-field>
       <input type="text" matInput placeholder="Name" name="name" required pattern="[A-Za-z]{1,32}" 
               [(ngModel)]="name" #Name="ngModel" minlength="2" maxlength="50"><br>
       <mat-error *ngIf="Name.invalid && (Name.dirty || Name.touched)">
@@ -22,7 +23,7 @@
     <mat-form-field>
       <textarea matInput placeholder="Address" name="address"  required rows="1" 
               [(ngModel)]="address" #Address="ngModel" minlength="2" maxlength="200"></textarea>
-      <mat-error *ngIf="Address.invalid && (Address.dirty || Address.touched)" class="alert">
+      <mat-error *ngIf="Address.invalid && (Address.dirty || Address.touched)">
         <mat-error *ngIf="Address.errors?.required">
           Address is required.
         </mat-error>
@@ -38,7 +39,6 @@
     <mat-form-field>
       <input type="text" matInput placeholder="Phonenumber" name="phonenumber"  required pattern="^((\\+91-?)|0)?[0-9]{10}$"
               [(ngModel)]="phonenumber" #Phonenumber="ngModel" minlength="10" maxlength="10">
-
       <mat-error *ngIf="Phonenumber.invalid && (Phonenumber.dirty || Phonenumber.touched)">
         <mat-error *ngIf="Phonenumber.errors?.required">
           Phonenumber is required.
@@ -51,7 +51,7 @@
         </mat-error> 
       </mat-error>
     </mat-form-field><br>
-    <button type="submit" [disabled]="!f.valid">Add</button>
+    <button mat-raised-button [disabled]="!f.valid" color="primary">Submit</button>
   </div>
 </form>
 
