--- a/src/app/add-employee/add-employee.component.scss
+++ b/src/app/add-employee/add-employee.component.scss
@@ -1,13 +1,22 @@
 .add {
-  padding-left: 20%;
+  padding-left: 15%;
+  padding-top: 30px;
+
   input { 
-    padding-right: 50px;
+    height: 3vh;
+    //border:solid;
+    //padding-bottom: 20px;
   }
-  button {
-    margin-top: 30px;
-    width: 60px;
-    height: 5vh;
-    font-weight: bold;
-    border: 1px solid ;
-  }
-}   
+
+   button {
+     margin-top: 20px;
+   }
+}  
+h1 {
+  margin-top: 10px;
+  padding-left: 15%;
+  color: skyblue;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 25px;
+} 
