--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,7 +4,7 @@
   margin: 0;
 }
 
-.sidenav {
+.app-module .sidenav {
   margin-right: 30px;
   margin: 0;
   padding: 0;
@@ -12,7 +12,7 @@
   padding-top: 20px;
 }
 
-.sidenav a {
+.app-module .sidenav a {
   padding: 15px;
   text-decoration: none;
   font-size: 23px;
@@ -20,13 +20,7 @@
   display: block;
 }
 
-.sidenav a:hover {
+.app-module .sidenav a:hover {
   color: #f1f1f1;
-}
-
-.right {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-          flex: 1 1 auto;
 }
 /*# sourceMappingURL=app.component.css.map */
