--- a/src/app/display-employee/display-employee.component.css
+++ b/src/app/display-employee/display-employee.component.css
@@ -1,7 +1,7 @@
 table {
-  padding-left: 20%;
-  border-collapse: separate;
-  border-spacing: 2px;
+  margin-left: 20%;
+  border: 1px solid #ddd;
+  margin-top: 5px;
 }
 
 th, td {
@@ -9,8 +9,7 @@ th, td {
 }
 
 th {
-  background-color: black;
-  color: white;
+  background-color: #dddddd;
   font-size: 15px;
   font-weight: bold;
 }
@@ -20,7 +19,16 @@ tr:nth-child(even) {
 }
 
 .pagination {
-  margin-left: 20%;
-  width: 70%;
+  margin-top: 15px;
+  margin-left: 35%;
+}
+
+h1 {
+  margin-top: 5px;
+  padding-left: 35%;
+  color: skyblue;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 25px;
 }
 /*# sourceMappingURL=display-employee.component.css.map */
