--- a/src/app/display-employee/display-employee.component.html
+++ b/src/app/display-employee/display-employee.component.html
@@ -1,26 +1,4 @@
-<!-- <table>
-<thead>
-  <th>Id</th>
-  <th>Name</th>
-  <th>Address</th>
-  <th>Phone number</th>
-</thead>
-<tbody *ngFor="let employee of employees">
-  <tr >
-    <td>{{employee.id}}</td>
-    <td>{{employee.name}}</td>
-    <td>{{employee.address}}</td>
-    <td>{{employee.phone_number}}</td>
-  </tr>
-</tbody>
-</table> -->
-
-<!-- <div class="example-header">
-  <mat-form-field>
-      <input matInput (keyup)="applyFilter($event.target.value)" matInput placeholder="Filter">
-  </mat-form-field>
-</div> -->
-
+<h1>Employee Details</h1>
 <table mat-table [dataSource]="employees" >
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef> Id </th>
@@ -38,15 +16,9 @@
     <th mat-header-cell *matHeaderCellDef> Phone number </th>
     <td mat-cell *matCellDef="let employee"> {{employee.phone_number}} </td>
   </ng-container>
-  <tr mat-header-row *matHeaderRowDef=" ['id', 'name', 'address', 'phone_number']" ></tr>
-  <tr mat-row  *matRowDef="let row; columns:  ['id', 'name', 'address', 'phone_number'];" ></tr>
+  <tr mat-header-row *matHeaderRowDef=" ['id', 'name', 'address', 'phone_number']"></tr>
+  <tr mat-row  *matRowDef="let row; columns:  ['id', 'name', 'address', 'phone_number'];"></tr>
 </table>
 
-
-<!-- <mat-paginator [pageSize]="2" [pageSizeOptions]="[2, 4, 6, 10, 20]">
-</mat-paginator> -->
-
- <ngb-pagination (pageChange)="onPaginationClick($event)" class="pagination" [pageSize] = "pageSize" [collectionSize]="collectionSize" [(page)]="page" [boundaryLinks]="true"></ngb-pagination>
-
- <!-- *ngFor="slice: length: length + 10" -->
- <!-- | slice: pageLength: pageLength + 10 -->
+<ngb-pagination (pageChange)="onPaginationClick($event)" class="pagination" [pageSize]="pageSize" 
+  [collectionSize]="collectionSize" [(page)]="page" [boundaryLinks]="true"></ngb-pagination>
