--- a/src/app/display-employee/display-employee.component.scss
+++ b/src/app/display-employee/display-employee.component.scss
@@ -1,14 +1,13 @@
 table {
-  padding-left: 20%;
-  border-collapse: separate;
-  border-spacing: 2px;
+  margin-left: 20%;
+  border: 1px solid #ddd;
+  margin-top: 5px;
 }
 th, td {
   width: 20%;
 }
 th {
-  background-color: lighten($color: #000000, $amount: 0);
-  color: white;
+  background-color: lighten($color: #ddd, $amount: 0);
   font-size: 15px;
   font-weight: bold;
 }
@@ -16,33 +15,14 @@ tr:nth-child(even) {
   background-color: #f8f8f8;
 }
 .pagination {
-  margin-left: 20%;
-  width: 70%;
+  margin-top: 15px;
+  margin-left: 35%;
 }
-
-// table {
-//   padding-left: 20%;
-//   border-collapse: separate;
-//   border-spacing: 2px;
-// }
-// th {
-//   width: 20%;
-// }
-// tbody, thead {
-//   height: 8vh;
-
-  
-// }
-// th {
-//   background-color: lighten($color: #000000, $amount: 0);
-//   color: white;
-//   font-size: 15px;
-//   font-weight: bold;
-// }
-// tbody:nth-child(even) {
-//   background-color: lightgray;
-// }
-// .pagination {
-//   margin-left: 20%;
-//   width: 70%;
-// }
+h1 {
+  margin-top: 5px;
+  padding-left: 35%;
+  color: skyblue;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 25px;
+}
