--- a/src/app/display-employee/display-employee.component.css
+++ b/src/app/display-employee/display-employee.component.css
@@ -5,7 +5,7 @@ table {
 }
 
 th, td {
-  width: 20%;
+  width: 21%;
 }
 
 th {
@@ -21,6 +21,15 @@ tr:nth-child(even) {
 .pagination {
   margin-top: 15px;
   margin-left: 35%;
+}
+
+.material-icons {
+  width: 33px;
+  color: #f36363;
+}
+
+.blue {
+  color: #6565db;
 }
 
 h1 {
