--- a/src/app/display-employee/display-employee.component.scss
+++ b/src/app/display-employee/display-employee.component.scss
@@ -4,7 +4,7 @@ table {
   margin-top: 5px;
 }
 th, td {
-  width: 20%;
+  width: 21%;
 }
 th {
   background-color: lighten($color: #ddd, $amount: 0);
@@ -18,6 +18,14 @@ tr:nth-child(even) {
   margin-top: 15px;
   margin-left: 35%;
 }
+.material-icons{
+    width: 33px;
+    color:rgb(243, 99, 99) ;
+}
+.blue {
+  color: rgb(101, 101, 219);
+}
+
 h1 {
   margin-top: 5px;
   padding-left: 35%;
