--- a/src/app/add-employee/add-employee.component.html
+++ b/src/app/add-employee/add-employee.component.html
@@ -1,4 +1,5 @@
-<h1>Add Employee</h1>
+<h1  *ngIf = "url == 'http://localhost:4200/add' || url == 'http://localhost:4200/'">Add Employee</h1>
+<h1  *ngIf = "url != 'http://localhost:4200/add' && url != 'http://localhost:4200/'">Edit Employee</h1>
 <form #f="ngForm" (ngSubmit)="onSubmit(f)">
   <div class="add">
     <mat-form-field>
@@ -51,7 +52,8 @@
         </mat-error> 
       </mat-error>
     </mat-form-field><br>
-    <button mat-raised-button [disabled]="!f.valid" color="primary">Submit</button>
+    <button mat-raised-button *ngIf = "url == 'http://localhost:4200/add'" [disabled]="!f.valid" color="primary">Submit</button>
+    <button mat-raised-button *ngIf = "url != 'http://localhost:4200/add'" [disabled]="!f.dirty" color="primary">Submit</button>
   </div>
 </form>
 
