--- a/src/app/dialog-employee/dialog-employee.component.html
+++ b/src/app/dialog-employee/dialog-employee.component.html
@@ -1,6 +1,6 @@
 
-<mat-dialog-content class="mat-typography">
-  <p>Do you want to delete the employee</p>
+<mat-dialog-content>
+  <p>Do you want to delete {{data.name}} ?</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
