--- a/src/app/display-employee/display-employee.component.html
+++ b/src/app/display-employee/display-employee.component.html
@@ -20,15 +20,14 @@
     <th mat-header-cell *matHeaderCellDef>  Action </th>
     <td mat-cell *matCellDef="let employee">
       <i (click)="edit(employee.id)" class="material-icons blue">edit</i>
-      <i (click)="delete(employee.id)" class="material-icons">delete</i> 
+      <i (click)="delete(employee.id, employee.name)" class="material-icons">delete</i> 
     </td>
   </ng-container>
   
   <tr mat-header-row *matHeaderRowDef=" ['id', 'name', 'address', 'phone_number', 'Action']"></tr>
   <tr mat-row  *matRowDef="let row; columns:  ['id', 'name', 'address', 'phone_number', 'Action'];"></tr>    
 </table>
-
-<ngb-pagination (pageChange)="onPaginationClick($event)" class="pagination" 
-  [collectionSize]="collectionSize" [(page)]="page" [boundaryLinks]="true">
+<ngb-pagination (pageChange)="onPaginationClick($event)" class="pagination"  *ngIf = "total_count > 10"
+  [collectionSize]="total_count"  [(page)]="page" [boundaryLinks]="true">
   <ng-template ngbPaginationNumber let-page>{{ page }}</ng-template>
 </ngb-pagination>
