--- a/src/app/display-employee/display-employee.component.scss
+++ b/src/app/display-employee/display-employee.component.scss
@@ -16,7 +16,7 @@ tr:nth-child(even) {
 }
 .pagination {
   margin-top: 15px;
-  margin-left: 35%;
+  margin-left: 50%;
 }
 .material-icons{
     width: 33px;
@@ -25,7 +25,9 @@ tr:nth-child(even) {
 .blue {
   color: rgb(101, 101, 219);
 }
-
+i {
+  cursor: pointer;
+}
 h1 {
   margin-top: 5px;
   padding-left: 35%;
