--- a/src/app/add-employee/add-employee.component.css
+++ b/src/app/add-employee/add-employee.component.css
@@ -19,4 +19,8 @@ h1 {
   font-weight: bold;
   font-size: 25px;
 }
+
+.input-field {
+  margin-bottom: 5px;
+}
 /*# sourceMappingURL=add-employee.component.css.map */
