--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,18 +1,18 @@
 .app-module {
   height: 100vh;
-  padding:0;
-  margin:0;
+  //padding:0;
+  //margin:0;
 
   .sidenav {
-   margin-right: 30px;
-   margin:0;
-   padding:0;
+   //margin-right: 30px;
+  //  margin:0;
+  //  padding:0;
     background-color: lighten($color: #000000, $amount: 0);
     padding-top: 20px;
   }
 
   .sidenav a {
-    padding: 15px ;
+    padding: 15px;
     text-decoration: none;
     font-size: 23px;
     color: #818181;
