--- a/src/app/display-employee/display-employee.component.html
+++ b/src/app/display-employee/display-employee.component.html
@@ -19,8 +19,8 @@
   <ng-container matColumnDef="Action">
     <th mat-header-cell *matHeaderCellDef>  Action </th>
     <td mat-cell *matCellDef="let employee">
-      <i (click)="edit(employee.id)" class="material-icons blue">edit</i>
-      <i (click)="delete(employee.id, employee.name)" class="material-icons">delete</i> 
+      <i (click)="navigateToEdit(employee.id)" class="material-icons blue">edit</i>
+      <i (click)="deleteEmployee(employee.id, employee.name)" class="material-icons">delete</i> 
     </td>
   </ng-container>
   
