--- a/src/app/display-employee/display-employee.component.html
+++ b/src/app/display-employee/display-employee.component.html
@@ -14,7 +14,7 @@
   </ng-container>
   <ng-container matColumnDef="phone_number">
     <th mat-header-cell *matHeaderCellDef> Phone number </th>
-    <td mat-cell *matCellDef="let employee"> {{employee.phonenumber}} </td>
+    <td mat-cell *matCellDef="let employee"> {{employee.phone_number}} </td>
   </ng-container>
   <ng-container matColumnDef="Action">
     <th mat-header-cell *matHeaderCellDef>  Action </th>
