--- a/src/app/dialog-employee/dialog-employee.component.scss
+++ b/src/app/dialog-employee/dialog-employee.component.scss
@@ -1,8 +1,8 @@
-button {
-  border: 1px solid ;
-  border-color: blue;
-  height: 5vh;
-}
+// button {
+//   border: 1px solid ;
+//   border-color: blue;
+//   height: 5vh;
+// }
 // .yes { 
 //   //background-color: red;
 //   font-weight: bold;
