--- a/src/app/add-employee/add-employee.component.scss
+++ b/src/app/add-employee/add-employee.component.scss
@@ -1,24 +1,73 @@
-.add {
-  padding-left: 15%;
-  padding-top: 30px;
-
-  input { 
-    height: 3vh;
-    //padding-bottom: 20px;
+.app-module {
+  height: 100vh;
+  .sidenav {
+    background-color: lighten($color: #000000, $amount: 0);
+    padding-top: 20px;
   }
-
-   button {
-     margin-top: 20px;
-   }
-}  
-h1 {
-  margin-top: 10px;
-  padding-left: 15%;
-  color: skyblue;
+  .sidenav a {
+    padding: 15px;
+    text-decoration: none;
+    font-size: 23px;
+    color: #818181;
+    display: block;
+  }
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+}
+marquee {
+  height: 7vh;
+  border: solid;
+  padding-right: 30px;
   font-family: sans-serif;
-  font-weight: bold;
-  font-size: 25px;
-} 
-.input-field {
-  margin-bottom: 5px;
+  color: white;
+  padding-top: 10px;
+  border: unset;
+  font-size: 28px;
+  background-color: skyblue;
+}
+.bg-img {
+  background-image: url('/assets/images/male-1354358_1280.png');
+  height: 30vh;
+  background-repeat: no-repeat;
+  background-size: 80%;
+  margin-left: 15%;
+}
+form {
+  .heading {
+    background-color: skyblue;
+    color: white;
+    padding-left: 25%;
+  }
+  .add {
+    height: 80vh;
+    margin-left: 20%;
+    border-radius: 10%;
+    display: inline-block;
+    background-color: lightgray;
+    width: 40%;
+    input { 
+      height: 3vh;
+    }
+    button {
+      margin-top: 20px;
+      margin-left: 30%;
+    }
+    .input-field {
+      margin-bottom: 5px;
+      padding-left: 30%;
+    } 
+    h1 {
+      padding-top: 10px;
+      padding-left: 30%;
+      color: rgb(107, 107, 202);
+      font-family: sans-serif;
+      font-weight: bold;
+      font-size: 25px;
+    } 
+  }
+}
+.right {
+  background-color: darkslategray;
+  height: 100vh;
 }
