--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -18,4 +18,15 @@
 .app-module .sidenav a:hover {
   color: #f1f1f1;
 }
+
+.login {
+  width: 30%;
+  margin-left: 20%;
+  background-color: lightgray;
+}
+
+.login h1 {
+  padding-left: 10%;
+  margin-top: 5%;
+}
 /*# sourceMappingURL=app.component.css.map */
