--- a/src/app/dialog-employee/dialog-employee.component.css
+++ b/src/app/dialog-employee/dialog-employee.component.css
@@ -1,6 +1,1 @@
-button {
-  border: 1px solid;
-  border-color: blue;
-  height: 5vh;
-}
-/*# sourceMappingURL=dialog-employee.component.css.map */
+/* No CSS *//*# sourceMappingURL=dialog-employee.component.css.map */
