--- a/src/app/dialog-employee/dialog-employee.component.html
+++ b/src/app/dialog-employee/dialog-employee.component.html
@@ -1,8 +1,8 @@
 
-<mat-dialog-content>
-  <p>Do you want to delete {{data.name}} ?</p>
-</mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Yes</button>
-</mat-dialog-actions>
+  <mat-dialog-content>
+    <p>Do you want to delete {{data.name}} ?</p>
+  </mat-dialog-content>
+  <mat-dialog-actions align="end">
+    <button  mat-raised-button mat-dialog-close color="secondary">Cancel</button>
+    <button  mat-raised-button [mat-dialog-close]="true" cdkFocusInitial color="primary">Yes</button>
+  </mat-dialog-actions>
