--- a/src/app/display-employee/display-employee.component.css
+++ b/src/app/display-employee/display-employee.component.css
@@ -1,3 +1,24 @@
+.app-module {
+  height: 100vh;
+}
+
+.app-module .sidenav {
+  background-color: black;
+  padding-top: 20px;
+}
+
+.app-module .sidenav a {
+  padding: 15px;
+  text-decoration: none;
+  font-size: 23px;
+  color: #818181;
+  display: block;
+}
+
+.app-module .sidenav a:hover {
+  color: #f1f1f1;
+}
+
 table {
   margin-left: 20%;
   border: 1px solid #ddd;
@@ -9,9 +30,12 @@ th, td {
 }
 
 th {
-  background-color: #dddddd;
-  font-size: 15px;
-  font-weight: bold;
+  background-color: #bcd2db;
+}
+
+th i {
+  cursor: context-menu;
+  color: #1b1616;
 }
 
 tr:nth-child(even) {
@@ -37,11 +61,13 @@ i {
 }
 
 h1 {
-  margin-top: 5px;
-  padding-left: 35%;
-  color: skyblue;
+  width: 100%;
+  height: 6vh;
+  background-color: skyblue;
+  text-align: center;
+  padding-top: 5px;
+  color: white;
   font-family: sans-serif;
-  font-weight: bold;
-  font-size: 25px;
+  font-size: 30px;
 }
 /*# sourceMappingURL=display-employee.component.css.map */
