--- a/src/app/display-employee/display-employee.component.html
+++ b/src/app/display-employee/display-employee.component.html
@@ -1,3 +1,10 @@
+<mat-drawer-container class="app-module">
+  <mat-drawer mode="side" opened class="sidenav"> 
+    <a href="add">Add Employee</a>
+    <a href="display">Employee List</a>  
+  </mat-drawer>
+<mat-drawer-content >
+<div class="display">
 <h1>Employee Details</h1>
 <table mat-table [dataSource]="employees" >
   <ng-container matColumnDef="id">
@@ -5,19 +12,20 @@
     <td mat-cell *matCellDef="let employee"> {{employee.id}} </td>
   </ng-container>
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
+    <th mat-header-cell *matHeaderCellDef>Name</th>
     <td mat-cell *matCellDef="let employee"> {{employee.name}} </td>
   </ng-container>
   <ng-container matColumnDef="address">
-    <th mat-header-cell *matHeaderCellDef> Address </th>
+    <th mat-header-cell *matHeaderCellDef>Address</th>
     <td mat-cell *matCellDef="let employee"> {{employee.address}} </td>
   </ng-container>
   <ng-container matColumnDef="phone_number">
-    <th mat-header-cell *matHeaderCellDef> Phone number </th>
-    <td mat-cell *matCellDef="let employee"> {{employee.phone_number}} </td>
+    
+    <th mat-header-cell *matHeaderCellDef >Phone number</th>
+    <td mat-cell *matCellDef="let employee" style="padding-right: 10px;"> {{employee.phone_number}} </td>
   </ng-container>
   <ng-container matColumnDef="Action">
-    <th mat-header-cell *matHeaderCellDef>  Action </th>
+    <th mat-header-cell *matHeaderCellDef>Action</th>
     <td mat-cell *matCellDef="let employee">
       <i (click)="navigateToEdit(employee.id)" class="material-icons blue">edit</i>
       <i (click)="deleteEmployee(employee.id, employee.name)" class="material-icons">delete</i> 
@@ -31,3 +39,6 @@
   [collectionSize]="total_count"  [(page)]="page" [boundaryLinks]="true">
   <ng-template ngbPaginationNumber let-page>{{ page }}</ng-template>
 </ngb-pagination>
+</div> 
+</mat-drawer-content> 
+</mat-drawer-container>
