--- a/src/app/display-employee/display-employee.component.scss
+++ b/src/app/display-employee/display-employee.component.scss
@@ -1,3 +1,24 @@
+
+.app-module {
+  height: 100vh;
+
+  .sidenav {
+    background-color: lighten($color: #000000, $amount: 0);
+    padding-top: 20px;
+  }
+
+  .sidenav a {
+    padding: 15px;
+    text-decoration: none;
+    font-size: 23px;
+    color: #818181;
+    display: block;
+  }
+
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+}
 table {
   margin-left: 20%;
   border: 1px solid #ddd;
@@ -7,6 +28,7 @@ th, td {
   width: 21%;
 }
 th {
+  background-color: rgb(188, 210, 219);
   background-color: lighten($color: #ddd, $amount: 0);
   font-size: 15px;
   font-weight: bold;
@@ -29,10 +51,12 @@ i {
   cursor: pointer;
 }
 h1 {
-  margin-top: 5px;
-  padding-left: 35%;
-  color: skyblue;
+  width: 100%;
+  height: 6vh;
+  background-color: skyblue;
+  text-align: center;
+  padding-top: 5px;
+  color: white;
   font-family: sans-serif;
-  font-weight: bold;
-  font-size: 25px;
+  font-size: 30px;
 }
