--- a/src/app/add-employee/add-employee.component.css
+++ b/src/app/add-employee/add-employee.component.css
@@ -1,63 +1,76 @@
 .app-module {
-  height: 100vh;
+  background-color: #ddd;
+  height: 92vh;
 }
 
 .app-module .sidenav {
-  background-color: black;
+  background-color: #565683;
   padding-top: 20px;
+  width: 15%;
+}
+
+.app-module i {
+  margin-left: 20px;
+  color: white;
+  font-size: 30px;
+  display: inline-block;
+}
+
+.app-module .logout {
+  padding-left: 60px;
+  margin-top: 210%;
 }
 
 .app-module .sidenav a {
+  margin-left: 25px;
   padding: 15px;
   text-decoration: none;
   font-size: 23px;
-  color: #818181;
-  display: block;
+  color: #9ca08a;
+  display: inline-block;
 }
 
 .app-module .sidenav a:hover {
   color: #f1f1f1;
 }
 
-.bg-img {
-  background-image: url("/assets/images/male-1354358_1280.png");
-  height: 30vh;
-  background-repeat: no-repeat;
-  background-size: 80%;
-  margin-left: 15%;
+.app-module .add form {
+  background-color: white;
+  margin-top: 5%;
+  width: 25%;
+  margin-left: 35%;
+  height: 50vh;
 }
 
-form .add {
-  height: 90vh;
-  margin-top: 20px;
-  margin-left: 50px;
-  border-radius: 10%;
-  display: inline-block;
-  background-color: pink;
-  width: 40%;
+.app-module .add form h1 {
+  height: 5vh;
+  color: white;
+  font-family: sans-serif;
+  font-size: 25px;
 }
 
-form .add input {
+.app-module .add form input {
   height: 3vh;
 }
 
-form .add button {
-  margin-top: 20px;
-  margin-left: 30%;
+.app-module .add form button {
+  margin-top: 10px;
+  margin-left: 20%;
 }
 
-form .add .input-field {
+.app-module .add form .input-field {
   margin-bottom: 5px;
-  padding-left: 30%;
+  padding-left: 20%;
 }
 
-form .add h1 {
-  margin-top: 20px;
-  padding-top: 10px;
-  padding-left: 30%;
-  color: lightyellow;
+.app-module .add form h1 {
+  width: 100%;
+  height: 7vh;
+  background-color: #676799;
+  padding-left: 22%;
+  padding-top: 5px;
+  color: white;
   font-family: sans-serif;
-  font-weight: bold;
-  font-size: 25px;
+  font-size: 20px;
 }
 /*# sourceMappingURL=add-employee.component.css.map */
