--- a/src/app/add-employee/add-employee.component.scss
+++ b/src/app/add-employee/add-employee.component.scss
@@ -1,73 +1,74 @@
+$side_nav-color: rgb(86, 86, 131);
+$side-nav-word-color: #9ca08a;
+$side-nav-word-hover-color: #f1f1f1;
+$white: white;
+$form-background-color:#ddd;
+$form-heading:rgb(103, 103, 153);
+$black: black;
+
 .app-module {
-  height: 100vh;
+  background-color: $form-background-color;
+  height: 92vh;
   .sidenav {
-    background-color: lighten($color: #000000, $amount: 0);
+    background-color: $side_nav-color;
     padding-top: 20px;
+    width: 15%;
+  }
+  i {
+    margin-left: 20px;
+    color: $white;
+    font-size: 30px;
+    display: inline-block;
+  }
+  .logout {
+    padding-left: 60px;
+    margin-top: 210%;
   }
   .sidenav a {
+    margin-left: 25px;
     padding: 15px;
     text-decoration: none;
     font-size: 23px;
-    color: #818181;
-    display: block;
+    color: $side-nav-word-color;
+    display: inline-block;
   }
   .sidenav a:hover {
-    color: #f1f1f1;
-  }
-}
-marquee {
-  height: 7vh;
-  border: solid;
-  padding-right: 30px;
-  font-family: sans-serif;
-  color: white;
-  padding-top: 10px;
-  border: unset;
-  font-size: 28px;
-  background-color: skyblue;
-}
-.bg-img {
-  background-image: url('/assets/images/male-1354358_1280.png');
-  height: 30vh;
-  background-repeat: no-repeat;
-  background-size: 80%;
-  margin-left: 15%;
-}
-form {
-  .heading {
-    background-color: skyblue;
-    color: white;
-    padding-left: 25%;
+    color: $side-nav-word-hover-color;
   }
   .add {
-    height: 80vh;
-    margin-left: 20%;
-    border-radius: 10%;
-    display: inline-block;
-    background-color: lightgray;
-    width: 40%;
-    input { 
-      height: 3vh;
+    form {
+      background-color: $white;
+      margin-top: 5%;
+      width: 25%;
+      margin-left: 35%;
+      height: 50vh;
+      h1 {
+        height: 5vh;
+        color: $white;
+        font-family: sans-serif;
+        font-size: 25px;
+      }
+      input { 
+        height: 3vh;
+      }
+      button {
+        margin-top: 10px;
+        margin-left: 20%;
+      }
+      .input-field {
+        margin-bottom: 5px;
+        padding-left: 20%;
+      } 
+      h1 {
+        width: 100%;
+        height: 7vh;
+        background-color: $form-heading;
+        padding-left: 22%;
+        padding-top: 5px;
+        color: $white;
+        font-family: sans-serif;
+        font-size: 20px;
+      } 
     }
-    button {
-      margin-top: 20px;
-      margin-left: 30%;
-    }
-    .input-field {
-      margin-bottom: 5px;
-      padding-left: 30%;
-    } 
-    h1 {
-      padding-top: 10px;
-      padding-left: 30%;
-      color: rgb(107, 107, 202);
-      font-family: sans-serif;
-      font-weight: bold;
-      font-size: 25px;
-    } 
   }
-}
-.right {
-  background-color: darkslategray;
-  height: 100vh;
 }
