--- a/src/app/add-user/add-user.component.scss
+++ b/src/app/add-user/add-user.component.scss
@@ -1,36 +1,40 @@
-.register {
-    padding-left: 15%;
-    padding-top: 30px;
-  
-    input { 
-      height: 3vh;
-      //padding-bottom: 20px;
-    }
-  
-     button {
-       margin-top: 20px;
-     }
-     .input-field {
-      margin-bottom: 5px;
-    }
-  } 
-  marquee {
-    height: 7vh;
-    border: solid;
-    padding-right: 30px;
-    font-family: sans-serif;
-    color: white;
-    padding-top: 10px;
-    border: unset;
-    font-size: 28px;
-    background-color: skyblue;
-  }
-  .bg-img {
-  background-image: url('/assets/images/Screenshot_20210807-115819_Chrome.jpg');
-  height: 98vh;
+$page-background-color: rgb(154, 154, 206); 
+$form-background-color: #ddd;
+$white: white;
+$form-heading: rgb(144, 127, 219);
+.bg-img {
+  background-image: url('/assets/images/plain.jpg');
+  height: 92vh;
   background-repeat: no-repeat;
   background-size: 100%;
-  height: 100vh;
-  background-attachment: fixed;
-  background-position: 0 0 0 40px; 
+
+  .register {
+    padding-top: 10px;
+    form {
+    background-color: $form-background-color;
+    margin-left: 35%;
+    height: 87.8vh;
+    width: 30%;
+      h1 {
+        height: 6vh;
+        padding-top: 5px;
+        color: $white;
+        background-color: $form-heading;
+        padding-left: 18%;
+        font-family: sans-serif;
+        font-size: 30px;
+      }
+      input { 
+        height: 3vh;
+      }
+      button {
+        margin-top: 20px;
+        margin-left: 20%;
+      }
+      .input-field {
+        margin-bottom: 5px;
+        padding-left: 20%;
+      } 
+    }
   }
+}
