--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,3 @@
-<!-- 
 
-<mat-drawer-container class="app-module">
-  <mat-drawer mode="side" opened class="sidenav"> 
-    <a href="add">Add Employee</a>
-    <a href="display">Employee List</a>  
-  </mat-drawer>
-    <mat-drawer-content  *ngIf = "url == 'http://localhost:4200/'" >
-      <app-add-employee></app-add-employee>
-    </mat-drawer-content>
-    <mat-drawer-content  *ngIf = "url != 'http://localhost:4200/'">
-      <router-outlet></router-outlet>
-    </mat-drawer-content> 
-</mat-drawer-container> -->
-
-
-  <!-- <mat-drawer mode="side" opened class="sidenav"> 
-    <a href="add">Add Employee</a>
-    <a href="display">Employee List</a>  
-  </mat-drawer> -->
-    <!-- <div class="login" >
-      
-      <div class="login_credentials" *ngIf = "url == 'http://localhost:4200/'"> 
-        <h1>Employee Management System</h1>
-        <app-login ></app-login>
-      </div>  
-    
-    <div  *ngIf = "url != 'http://localhost:4200/'">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
- -->
+ <h1>Ideas2It Technologies</h1>
  <router-outlet></router-outlet>
