--- a/src/app/display-employee/display-employee.component.css
+++ b/src/app/display-employee/display-employee.component.css
@@ -1,73 +1,77 @@
 .app-module {
-  height: 100vh;
+  background-color: white;
+  height: 92vh;
 }
 
 .app-module .sidenav {
-  background-color: black;
+  background-color: #565683;
   padding-top: 20px;
+  width: 15%;
+}
+
+.app-module .side-nav-i {
+  margin-left: 20px;
+  color: white;
+  font-size: 30px;
+}
+
+.app-module .logout {
+  color: white;
+  font-size: 35px;
+  padding-left: 60px;
+  margin-top: 210%;
 }
 
 .app-module .sidenav a {
+  margin-left: 25px;
   padding: 15px;
   text-decoration: none;
   font-size: 23px;
+  display: inline-block;
   color: #818181;
-  display: block;
 }
 
 .app-module .sidenav a:hover {
   color: #f1f1f1;
 }
 
-table {
+.app-module .display table {
   margin-left: 20%;
   border: 1px solid #ddd;
-  margin-top: 5px;
+  margin-top: 2px;
 }
 
-th, td {
-  width: 21%;
+.app-module .display td {
+  background-color: #ddd;
 }
 
-th {
-  background-color: #bcd2db;
+.app-module .display th, .app-module .display td {
+  width: 22%;
 }
 
-th i {
-  cursor: context-menu;
-  color: #1b1616;
+.app-module .display th {
+  background-color: lightslategrey;
+  font-size: 15px;
+  color: white;
 }
 
-tr:nth-child(even) {
-  background-color: #f8f8f8;
-}
-
-.pagination {
+.app-module .display .pagination {
   margin-top: 15px;
   margin-left: 47%;
 }
 
-.material-icons {
+.app-module .display .red {
   width: 33px;
   color: #f36363;
+  font-size: 25px;
 }
 
-.blue {
+.app-module .display .blue {
+  font-size: 25px;
   color: #6565db;
 }
 
-i {
+.app-module .display i {
   cursor: pointer;
-}
-
-h1 {
-  width: 100%;
-  height: 6vh;
-  background-color: skyblue;
-  text-align: center;
-  padding-top: 5px;
-  color: white;
-  font-family: sans-serif;
-  font-size: 30px;
 }
 /*# sourceMappingURL=display-employee.component.css.map */
