--- a/src/app/display-employee/display-employee.component.scss
+++ b/src/app/display-employee/display-employee.component.scss
@@ -1,62 +1,80 @@
+$side_nav-color: #000000;
+$side-nav-word-color: #818181;
+$side-nav-word-hover-color: #f1f1f1;
+$th-color:#ddd;
+$white: white;
+$page-background-color: rgb(222, 223, 211);
+$heading-color: rgb(103, 103, 153);
+$black: black;
+$tr-color:#f8f8f8;
+$edit-color: rgb(243, 99, 99);
+$delete-color: rgb(101, 101, 219);
+$lightslategrey: lightslategrey;
+$side-nav-color: rgb(86, 86, 131);
 
 .app-module {
-  height: 100vh;
-
+  background-color: $white;
+  height: 92vh;
   .sidenav {
-    background-color: lighten($color: #000000, $amount: 0);
+    background-color: $side-nav-color;
     padding-top: 20px;
+    width: 15%;
   }
-
+  .side-nav-i {
+    margin-left: 20px;
+    color: $white;
+    font-size: 30px;
+  }
+  .logout {
+    color: $white;
+    font-size: 35px;
+    padding-left: 60px;
+    margin-top: 210%;
+  }
   .sidenav a {
+    margin-left: 25px;
     padding: 15px;
     text-decoration: none;
     font-size: 23px;
-    color: #818181;
-    display: block;
+    display: inline-block;
+    color: $side-nav-word-color;
   }
-
   .sidenav a:hover {
-    color: #f1f1f1;
+    color: $side-nav-word-hover-color;
   }
-}
-table {
-  margin-left: 20%;
-  border: 1px solid #ddd;
-  margin-top: 5px;
-}
-th, td {
-  width: 21%;
-}
-th {
-  background-color: rgb(188, 210, 219);
-  background-color: lighten($color: #ddd, $amount: 0);
-  font-size: 15px;
-  font-weight: bold;
-}
-tr:nth-child(even) {
-  background-color: #f8f8f8;
-}
-.pagination {
-  margin-top: 15px;
-  margin-left: 47%;
-}
-.material-icons{
-    width: 33px;
-    color:rgb(243, 99, 99) ;
-}
-.blue {
-  color: rgb(101, 101, 219);
-}
-i {
-  cursor: pointer;
-}
-h1 {
-  width: 100%;
-  height: 6vh;
-  background-color: skyblue;
-  text-align: center;
-  padding-top: 5px;
-  color: white;
-  font-family: sans-serif;
-  font-size: 30px;
+  .display {
+    table {
+      margin-left: 20%;
+      border: 1px solid $th-color;
+      margin-top: 2px;
+    }
+    td {
+      background-color: $th-color;
+    }
+    th, td {
+      width: 22%;
+    }
+    th {
+      background-color: $lightslategrey;
+      font-size: 15px;
+      color: $white;
+    }
+    
+    .pagination {
+      margin-top: 15px;
+      margin-left: 47%;
+    }
+    .red{
+        width: 33px;
+        color: $edit-color;
+        font-size: 25px;
+    }
+    .blue {
+      font-size: 25px;
+      color: $delete-color;
+    }
+    i {
+      cursor: pointer;
+    } 
+  }
 }
