--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,40 +1,27 @@
-marquee {
-  height: 7vh;
-  border: solid;
-  padding-right: 30px;
-  font-family: sans-serif;
-  color: white;
-  padding-top: 10px;
-  border: unset;
-  font-size: 28px;
+.login {
+  width: 100%;
+  display: inline-block;
+}
+
+.login .left {
+  width: 40%;
+  height: 98vh;
   background-color: skyblue;
 }
 
-.bg-img {
-  background-image: url("/assets/images/Screenshot_20210807-115819_Chrome.jpg");
-  height: 98vh;
+.login .left .bg-img {
+  background-image: url("/assets/images/photo.jpg");
+  height: 92vh;
   background-repeat: no-repeat;
-  background-size: 100%;
-  height: 100vh;
-  background-attachment: fixed;
-  background-position: 0 0 0 40px;
+  background-size: 20%;
+  padding-top: 6%;
+  margin: 8;
 }
 
-.login {
-  padding-left: 10%;
-  padding-top: 10%;
-}
-
-.login input {
-  height: 3vh;
-}
-
-.login .input-field {
-  margin-bottom: 3px;
-}
-
-.login button {
-  margin-top: 50px;
-  margin-right: 5%;
+.login .left .bg-img h1 {
+  padding-top: 40%;
+  font-size: 36px;
+  line-height: 36px;
+  color: #ffffff;
 }
 /*# sourceMappingURL=login.component.css.map */
