--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,36 +1,78 @@
-marquee {
-  height: 7vh;
-  border: solid;
-  padding-right: 30px;
-  font-family: sans-serif;
-  color: white;
-  padding-top: 10px;
-  border: unset;
-  font-size: 28px;
-  background-color: skyblue;
-}
+$page-background-color: rgb(154, 154, 206); 
+$form-background-color: #ddd;
+$white: white;
+$form-heading: rgb(103, 103, 153);
+
 .bg-img {
-  background-image: url('/assets/images/Screenshot_20210807-115819_Chrome.jpg');
-height: 98vh;
-background-repeat: no-repeat;
-background-size: 100%;
-height: 100vh;
-background-attachment: fixed;
-background-position: 0 0 0 40px; 
-}
-.login {
-  padding-left: 10%;
-  padding-top: 10%;
-  input { 
-    height: 3vh;
+  background-image: url('/assets/images/plain.jpg');
+  height: 92vh;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  .login {
+    padding-top: 6%;
+    form {
+    background-color: $form-background-color;
+    margin-left: 35%;
+    height: 55vh;
+    width: 30%;
+      h1 {
+        height: 7vh;
+        padding-top: 5px;
+        color: $white;
+        background-color: rgb(144, 127, 219);
+        padding-left: 32%;
+        font-family: sans-serif;
+        font-size: 30px;
+      }
+      input { 
+        height: 3vh;
+      }
+      button {
+        margin-top: 20px;
+        margin-left: 20%;
+      } 
+      .input-field {
+        margin-bottom: 5px;
+        padding-left: 20%;
+      } 
+      span {
+        padding-left: 50px;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 17px;
+        line-height: 21px;
+        color: #616161;
+      }
+    } 
   }
-  .input-field {
-      margin-bottom: 3px;
-    }
-    button {
-  //display: block;
-  margin-top: 50px;
-  margin-right: 5%;
-}
 }
 
+// .login {
+//   width: 100%;
+
+//   .left {
+//     height: 92vh;
+//     display: inline-block;
+//     width: 40%;
+//     //float:left;
+//     background-color: skyblue;
+//     .bg-img {
+//       background-image: url('/assets/images/photo.jpg');
+//       background-repeat: no-repeat;
+//       background-size: 20%;
+//       padding-top: 6%;
+//       margin :8;
+//     h1 {
+//       padding-top: 40%;
+//       font-size: 36px;
+//       line-height: 36px;
+//       color: #ffffff;
+//     }
+//   }
+//   }
+//   .right {
+//     width: 40%;
+//     display: inline-block;
+//     border: solid;
+//   }
+// }
